# molequeue

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  CTestConfig.cmake  LICENSE  README.md  main.cpp  project.config  qjsonarray.cpp  qjsonarray.h  qjsonobject.cpp  qjsonobject.h  qjsonparser.cpp  qjsonvalue.cpp  qjsonvalue.h
MoleQueue/: CMakeLists.txt  Connection.cpp  Connection.h  ProgramItemModel.cpp  ProgramItemModel.h  ProgramTableView.cpp  ProgramTableView.h  QueueItemModel.cpp  QueueItemModel.cxx  QueueItemModel.h  QueueLocal.cpp  QueueLocal.h  QueueRemote.cpp  QueueRemote.h  QueueSGE.cpp  QueueSGE.h  addqueuedialog.ui  job.cpp  job.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  program.cpp  program.h  queue.cpp  queue.h  queuemanager.cpp  queuemanagerdialog.cpp  queuemanagerdialog.h  queuesettingsdialog.cpp  queuesettingsdialog.ui  sshcommand.cpp
MoleQueue/testing/: CMakeLists.txt  program.cpp  queue.cpp
docs/: CMakeLists.txt  doxyfile.in  mainpage.dox
molequeue/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  abstractqueuesettingswidget.h  abstractrpcinterface.cpp  abstractrpcinterface.h  actionfactorymanager.cpp  actionfactorymanager.h  addqueuedialog.cpp  addqueuedialog.h  advancedfilterdialog.cpp  advancedfilterdialog.h  client.cpp  client.h  clientjsonrpc.cpp  clientjsonrpc.h  connection.cpp  connection.h  connectionlistener.h  credentialsdialog.cpp  credentialsdialog.h  error.cpp  error.h  filebrowsewidget.cpp  filebrowsewidget.h  filespec.cpp  filespec.h  filespecification.cpp  filespecification.h  filesystemtools.cpp  filesystemtools.h  idtypeutils.h  importprogramdialog.cpp  importprogramdialog.h  importqueuedialog.cpp  importqueuedialog.h  job.cpp  job.h  jobactionfactory.cpp  jobactionfactory.h  (+91 more)
molequeue/app/: CMakeLists.txt  aboutdialog.h  abstractqueuesettingswidget.cpp  abstractqueuesettingswidget.h  actionfactorymanager.h  addqueuedialog.cpp  advancedfilterdialog.cpp  advancedfilterdialog.h  credentialsdialog.cpp  credentialsdialog.h  filebrowsewidget.cpp  filebrowsewidget.h  filespecification.h  idtypeutils.h  importprogramdialog.cpp  importprogramdialog.h  importqueuedialog.cpp  importqueuedialog.h  job.cpp  job.h  jobactionfactory.h  jobdata.h  jobitemmodel.cpp  jobitemmodel.h  jobmanager.cpp  jobmanager.h  jobreferencebase.cpp  jobreferencebase.h  jobtableproxymodel.cpp  jobtableproxymodel.h  jobtablewidget.cpp  jobtablewidget.h  jobview.cpp  jobview.h  localqueuewidget.h  logentry.cpp  logentry.h  logger.cpp  logger.h  logwindow.cpp  (+42 more)
molequeue/certs/: DoD Interoperability Root CA 1.cer  SHA-1 Federal Root CA.cer
molequeue/client/: CMakeLists.txt  client.cpp  client.h  job.cpp  job.h  jobobject.cpp  jobobject.h  jsonrpcclient.cpp  jsonrpcclient.h
molequeue/icons/: molequeue.rc
molequeue/jobactionfactories/: killjobactionfactory.cpp  killjobactionfactory.h  opendirectoryactionfactory.cpp  opendirectoryactionfactory.h  openwithactionfactory.cpp  openwithactionfactory.h  programmableopenwithactionfactory.cpp  programmableopenwithactionfactory.h  removejobactionfactory.cpp  removejobactionfactory.h  viewjoblogactionfactory.cpp  viewjoblogactionfactory.h
molequeue/lastinstall/: CMakeLists.txt
molequeue/plugins/: CMakeLists.txt
molequeue/queues/: local.cpp  local.h  localworker.cpp  localworker.h  pbs.cpp  pbs.h  queueuit.cpp  queueuit.h  remote.cpp  remote.h  remotessh.cpp  remotessh.h  sge.cpp  sge.h  slurm.cpp  slurm.h
molequeue/servercore/: CMakeLists.txt  connection.h  connectionlistener.h  connectionlistenerfactory.h  jsonrpc.cpp  jsonrpc.h  localsocketconnection.cpp  localsocketconnection.h  localsocketconnectionlistener.cpp  localsocketconnectionlistener.h  message.cpp  message.h  messageidmanager_p.cpp  messageidmanager_p.h  servercoreglobal.h
molequeue/testing/: CMakeLists.txt  abstractrpcinterfacetest.cpp  authenticateconttest.cpp  authenticateresponsetest.cpp  clientjsonrpctest.cpp  clientservertest.cpp  clienttest.cpp  compositeiodevicetest.cpp  connectiontest.cpp  connectiontest.h  dirlistinginfotest.cpp  dummyconnection.cpp  dummyconnection.h  dummyconnectionlistener.h  dummyjsonrpc.cpp  dummyjsonrpc.h  dummyqueuemanager.cpp  dummyqueuemanager.h  dummyqueueremote.cpp  dummyqueueremote.h  dummyserver.h  dummysshcommand.cpp  dummysshcommand.h  filespecificationtest.cpp  filespectest.cpp  jobmanagertest.cpp  jobsubmissioninfotest.cpp  jsonrpc.cpp  jsonrpctest.cpp  kerberoscredentialstest.cpp  localclienttest.cpp  localsocketconnectiontest.cpp  messagetest.cpp  molequeuetest.cpp  molequeuetestconfig.h.in  pbstest.cpp  program.cpp  programtest.cpp  queue.cpp  queuemanagertest.cpp  (+16 more)
molequeue/transport/: CMakeLists.txt  abstractrpcinterface.cpp  abstractrpcinterface.h  connection.h  connectionlistener.h  connectionlistenerfactory.h  jsonrpc.cpp  jsonrpc.h  localsocketconnection.cpp  localsocketconnection.h  localsocketconnectionlistener.cpp  localsocketconnectionlistener.h  message.cpp  message.h  messageidmanager_p.cpp  messageidmanager_p.h  qtjson.h  zeromqconnection.cpp  zeromqconnection.h  zeromqconnectionlistener.cpp  zeromqconnectionlistener.h
molequeue/ui/: aboutdialog.ui  addqueuedialog.cpp  addqueuedialog.ui  advancedfilterdialog.ui  credentialsdialog.ui  importprogramdialog.ui  importqueuedialog.ui  jobtablewidget.ui  localqueuewidget.ui  logwindow.ui  mainwindow.cpp  mainwindow.ui  openwithmanagerdialog.ui  programconfiguredialog.ui  queuemanagerdialog.cpp  queuemanagerdialog.ui  queuesettingsdialog.cpp  queuesettingsdialog.h  queuesettingsdialog.ui  remotequeuewidget.ui  templatekeyworddialog.ui  uitqueuewidget.ui  uitsessionconfigdialog.ui  uitsessiondialog.ui
molequeue/wsdl/: uitapi.wsdl
python/: CMakeLists.txt
python/molequeue/: __init__.py  (+2 more)
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  program.cpp  program.h  qjson_p.h  qjsonarray.cpp  qjsonarray.h  qjsondocument.h  qjsonobject.cpp  qjsonparser.cpp  qjsonvalue.cpp  qjsonvalue.h  qjsonwriter.cpp  queue.cpp  queue.h  queuetray.qrc  sshcommand.cpp  sshconnection.cpp  sshconnection.h  terminalprocess.cpp  terminalprocess.h
(+337 files in other folders)
